# splunk-cluster-mcp

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
examples/: mcp-config.example.json
scripts/: smoke_tools.py  smoke_topology.py
src/splunk_cluster_mcp/: __init__.py  config.py  gateway.py  server.py  splunk_client.py  ssh_util.py  state.py  topology.py
src/splunk_cluster_mcp/tools/: cluster.py  connect.py  disk.py  indexes.py  license.py  logs.py  scenario.py  search.py  shc.py  users.py
tests/: conftest.py  test_smoke.py
